--- a/scripts/snapcraft.yaml.tmpl
+++ b/scripts/snapcraft.yaml.tmpl
@@ -22,7 +22,5 @@ parts:
     python-version: python3
     source: https://github.com/jamesstidard/Mzo-Cli/archive/v{version:}.tar.gz
     source-checksum: sha256/{sha256:}
-    override-pull: |
-      snapcraftctl pull
-      pip install --user pipenv
-      pipenv lock --requirements > requirements.txt
+    stage-packages:
+      - {requirements:}
