--- a/scripts/snapcraft.yaml.tmpl
+++ b/scripts/snapcraft.yaml.tmpl
@@ -22,5 +22,5 @@ parts:
     python-version: python3
     source: https://github.com/jamesstidard/Mzo-Cli/archive/v{version:}.tar.gz
     source-checksum: sha256/{sha256:}
-    stage-packages:
-      - {requirements:}
+    requirements:
+      - requirements.txt
