--- a/scripts/snapcraft.yaml.tmpl
+++ b/scripts/snapcraft.yaml.tmpl
@@ -22,4 +22,5 @@ parts:
     python-version: python3
     source: https://github.com/jamesstidard/Mzo-Cli/archive/v{version:}.tar.gz
     source-checksum: sha256/{sha256:}
-    requirements: snapcraft-requirements.txt
+    requirements:
+      - snapcraft-requirements.txt
